--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:customtabs:23.0.1'
+    compile "com.android.support:appcompat-v7:$support_library_version"
+    compile "com.android.support:customtabs:$support_library_version"
     compile 'com.squareup.okhttp:okhttp:2.4.0'
 }
